--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,17 @@
 title: clawson.github.io
 description: >- 
   Dan Clawson Library
-domain: clawson.github.io
-url: https://clawson.github.io
-baseurl: "/library"
+# domain: clawson.github.io
+# url: https://clawson.github.io/library/
+# baseurl: /library
 github_username:  clawson
 
-theme: minima
+source: ./src
+
+# architect
+# midnight
+# minimal
+
+theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
