--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,7 @@
-title: clawson.github.io
-description: >- 
-  Dan Clawson Library
-# domain: clawson.github.io
-# url: https://clawson.github.io/library/
-# baseurl: /library
-github_username:  clawson
+title: "Dan Clawson: Library"
+url: https://clawson.github.io/library/
 
 timezone: America/Denver
-
-# architect
-# midnight
-# minimal
 
 theme: jekyll-theme-midnight
 plugins:
