remove trailing slash

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Dan Clawson: Library"
-url: https://clawson.github.io/library/
+url: https://clawson.github.io/library
 
 timezone: America/Denver
 
